# lacenet

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  Makefile
include/: lacenet.h  lacenet_client.h  lacenet_server.h
ios/Lacenet.xcodeproj/: project.pbxproj
ios/Lacenet_mac.xcodeproj/: project.pbxproj
src/: buffer.c  buffer.h  common.h  error.c  message.c  message.h
src/client/: channel.c  channel.h  client.c  client.h  message.c  peer.c  peer.h
src/client/request/: channel_list.c  connect.c  join_channel.c  set_name.c
src/server/: channel.c  channel.h  client.c  client.h  message.c  server.c  server.h
src/server/request/: channel_list.c  connect.c  join_channel.c  leave_channel.c  set_name.c
test/: client.c  server.c
